--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=62Teknologi
 APP_ENV=local
-APP_KEY=base64:ImX9QQQX11Rlg/JFShtz1Yf68681rdcoYr4BgqQbqEM=
+APP_KEY=base64:zd7ha3dW25ssabwa0WQJPBgGTKxX/Qt0B2UxP1ZzFhY=
 APP_DEBUG=true
 APP_URL=http://127.0.0.1:8000
 
@@ -12,7 +12,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=iban
+DB_DATABASE=62teknologi
 DB_USERNAME=root
 DB_PASSWORD=
 
