--- a/composer.json
+++ b/composer.json
@@ -6,22 +6,22 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
-        "guzzlehttp/guzzle": "^7.2",
-        "inertiajs/inertia-laravel": "^0.6.8",
-        "laravel/framework": "^9.19",
-        "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.7",
-        "tightenco/ziggy": "^1.0",
+        "authy/php": "^4.0",
         "bacon/bacon-qr-code": "^2.0",
         "doctrine/dbal": "^3.4",
         "dymantic/laravel-instagram-feed": "^3.2",
         "fruitcake/laravel-cors": "^2.0",
+        "guzzlehttp/guzzle": "^7.2",
         "illuminate/support": "^9.40",
+        "inertiajs/inertia-laravel": "^0.6.3",
         "intervention/image": "dev-master",
         "jenssegers/agent": "^2.6",
         "joggapp/laravel-google-translate": "^8.1",
+        "laravel/framework": "^9.19",
         "laravel/jetstream": "^2.12",
+        "laravel/sanctum": "^2.8",
         "laravel/socialite": "^5.5",
+        "laravel/tinker": "^2.7",
         "laravel/ui": "^4.0",
         "laraveldaily/laravel-charts": "^0.1.29",
         "livewire/livewire": "^2.5",
@@ -32,17 +32,16 @@
         "simplesoftwareio/simple-qrcode": "~4",
         "spatie/laravel-cookie-consent": "^3.2",
         "stichoza/google-translate-php": "^4.1",
+        "tightenco/ziggy": "^1.0",
         "yajra/laravel-datatables-oracle": "~9.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
-        "laravel/breeze": "^1.18",
+        "laravel/breeze": "^1.16",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^6.1",
-        "pestphp/pest": "^1.16",
-        "pestphp/pest-plugin-laravel": "^1.1",
         "phpunit/phpunit": "^9.5.10",
         "spatie/laravel-ignition": "^1.0"
     },
@@ -86,6 +85,6 @@
             "pestphp/pest-plugin": true
         }
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true
 }
